--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,14 +1,13 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-main {
-    flex: 2;
-}
-
-section {
-    max-width: 800px;
-    margin: 50px auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(50px, auto);
+    grid-template-areas: 'hd' 'main' 'ft';
+    main {
+        grid-area: 'main';
+    }
+    section {
+        max-width: 800px;
+        margin: 50px auto;
+    }
 }
