--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,12 +1,12 @@
+@use 'base';
 form {
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
-}
-
-input {
-    padding: 5px 20px;
-    width: 100%;
-    line-height: 16px;
-    margin: 10px 0;
+    input {
+        padding: .5em 1em;
+        width: 100%;
+        line-height: 16px;
+        margin: 10px 0;
+    }
 }
