add text classify

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <form class="" onsubmit="return Client.handleSubmit(event)">
-                <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
+                <input id="url" type="url" name="input" value="" onblur="onBlur()" placeholder="add the url you want feedback on">
                 <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
             </form>
             <section>
